--- a/todo
+++ b/todo
@@ -1,7 +1,8 @@
 HLT path filter in analyze.py
 TChain support
 unpack by words in CMS format (fix vectorLong)
-runs file
+EOS
+auto bcn delta?
 support both data formats (AMC13/DCC2)
 unpack HTR data
 electronics map
