--- a/todo
+++ b/todo
@@ -1,5 +1,7 @@
 HLT path filter in analyze.py
 TChain support
+TTree cache
 unpack by words in CMS format (fix vectorLong)
-support both data formats (AMC13/DCC2)
 electronics map
+improve storage structure
+clean up unpacking loop
