--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 TChain support
 improve storage structures
-cp old skim
-label vs with errf
+performance
+cp old deadbeef
+keyboard interrupt
+patterns --> 1 event
