improve rate plot

--- a/todo.txt
+++ b/todo.txt
@@ -3,13 +3,11 @@ performance
 cp old deadbeef
 split compare
 bcn vs. fed
-unc. on zero rate
 git grep -in fixme
 zcat
 fwlite
 fix soi
 use bcn in event maps
 improve time label (orn ~ min)
-time-order loop
-peak l1a rate
 minutes range (min/max)
+dq vs time
