--- a/todo.txt
+++ b/todo.txt
@@ -8,5 +8,6 @@ fwlite
 use bcn in event maps
 bcn vs. fed
 restore cron
-map m&p
 make ticks visible in problem maps
+map mismatches
+plot mismatch fraction
