--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,4 @@ compare cap-ids
 improve summary plots to handle more feds
 fix ErrF=3 vs. missing patterns
 fix --rmribbon
+investigate 246908 HBHE matches
